--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,4 +1,4 @@
-main {
+body > main {
     --width: 80%;
     --height: auto;
     --spacing: var(--lg);
